m-17-2-loadbalacer-security-group-for-Cloudfront.tf
resource "aws_security_group" "alb_private_sg" {
  name        = "${var.environment}-alb-private-sg"
  description = "ALB only accessible from CloudFront"
  vpc_id      = module.vpc.vpc_id

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] # you could tighten this to CF IP ranges
    description = "HTTPS from CloudFront"
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "HTTP from CloudFront (redirect to HTTPS)"
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = local.common_tags
}
